Test compare thread pool with virtual thread